# AutoCar

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  LICENSE.md  README.md
amcl/: CMakeLists.txt
autocar_nav/: CMakeLists.txt  package.xml
autocar_nav/costmap/: costmap_converter_params.yaml  local_costmap_params.yaml
autocar_nav/launch/: car.launch  car_config.launch  car_mapping.launch  car_nav.launch  car_sim.launch  car_sim_mapping.launch
autocar_nav/map/: RMmap-2.yaml
autocar_nav/move_base/: move_base_sim.xml
autocar_nav/planner/: base_local_planner_params_old.yaml  base_local_planner_params_slow.yaml  local_planner_params.yaml
autocar_nav/rviz/: single_robot.rviz
autocar_nav/stage/: car_sim.launch  car_sim_mapping.launch
autocar_nav/vision/: armor_params.xml
autocar_nav/worlds/: RMmap.world
calibration-param/: 480P_120_7.xml  480P_120_MH.xml
camera/: CMakeLists.txt  package.xml
camera/include/: uvc_camera.h
camera/src/: camera_node.cpp  uvc_camera.cpp
config/: armor_params.xml
config/camera/: 480P_120_RH.xml
config/costmap/: costmap_common_params_old.yaml  global_costmap_params.yaml
config/map/: RMmap.yaml
config/move_base/: move_base_params.yaml
costmap_2d/: CMakeLists.txt
decision/: CMakeLists.txt  package.xml
decision/behavior/: point_mode.cpp  shooting_mode.h
decision/include/: decision.h  decision_node.h  logical_core.h
decision/include/behavior/: mission_mode.h  patrol_mode.h  point_mode.h
decision/msg/: shoot_info.msg
decision/src/: decision_node.cpp  logical_core.cpp
decision/src/behavior/: mission_mode.cpp  patrol_mode.cpp  shooting_mode.cpp
detect/: CMakeLists.txt  package.xml
detect/include/: angle_solver.h  armor_detect.h  armor_detect_node.h  armor_history.h  armor_info.h
detect/launch/: armor_detect.launch
detect/msg/: armor_goal.msg  enemy_info.msg
detect/src/: angle_solver.cpp  armor_detect.cpp  armor_detect_node.cpp  armor_history.cpp  armor_info.cpp
doc/: 80-usbcam.rules  To-do-List.md  Todo.md  choose_armor.md  detect_armor.md  readme.md  robomaster_mode.md
extra/: readme.md
extra/armor_sample/: CMakeLists.txt  armor_params.xml  detect.cpp  detect.hpp  info.cpp  info.h  main.cpp
extra/train/: CMakeLists.txt  main.cpp  train.cpp  train.h
include/common/: ImageConsProd.hpp  common_serial.h
include/detect_factory/: armor_detect.hpp  armor_info.h
include/driver/: LinuxSerial.hpp  RMVideoCapture.hpp  camera_driver.h
include/slover/: angle_slover.hpp  armor_recorder.hpp
include/utility/: debug_utility.hpp  video_recoder.h
move_base/: CMakeLists.txt
move_base/include/move_base/: move_base.h
move_base/launch/: move_base.xml  move_base_sim.xml
move_base/move_base_config/: amcl_node.xml  amcl_node_sim.xml  base_global_planner_params.yaml  base_local_planner_params_dwa.yaml  base_local_planner_params_modify.yaml  costmap_common_params.yaml  costmap_common_params_sim.yaml
move_base/src/: move_base.cpp
multi-car/: CMakeLists.txt  package.xml
multi-car/include/: udp_broadcast.h
multi-car/launch/: multi-car.launch
multi-car/src/: client_node.cpp  server_node.cpp
multiwar/: CMakeLists.txt  package.xml
multiwar/launch/: multiwar.launch
multiwar/msg/: share_info.msg
multiwar/src/: client_node.cpp  server_node.cpp
odometry/: CMakeLists.txt  LICENSE  package.xml
odometry/include/: vel2odom.h
odometry/src/: tf_tree.cpp  vel2odom.cpp  vel2odom_node.cpp
recoder/: CMakeLists.txt  package.xml
recoder/include/: video_recoder.h
recoder/src/: video_recoder_node.cpp
rplidar_ros/: package.xml
rplidar_ros/launch/: hector_mapping.launch
rplidar_ros/rviz/: rplidar.rviz
rplidar_ros/src/: node.cpp  node.test.cpp
serial/: CMakeLists.txt  package.xml
serial/include/: serial_read_proto.h  serial_write_proto.h
serial/launch/: serial.launch
serial/msg/: car_info.msg  chassis_info.msg  gimbal_info.msg
serial/src/: serial_read_node.cpp  serial_write_node.cpp
smartcar_description/: CMakeLists.txt  package.xml
smartcar_description/config/: smartcar_arbotix.yaml
smartcar_description/launch/: base.launch.rviz.launch  smartcar_display.rviz.launch
smartcar_description/urdf/: gazebo.urdf.xacro  smartcar.urdf  smartcar.urdf.xacro  smartcar_body.urdf.xacro
src/common/: CMakeLists.txt  ImageConsProd.cpp  common_serial.cpp  main.cpp
src/detect_factory/: CMakeLists.txt  armor_detect.cpp  armor_info.cpp
src/driver/: CMakeLists.txt  LinuxSerial.cpp  RMVideoCapture.cpp  camera_driver.cpp
src/slover/: CMakeLists.txt  angle_slover.cpp  armor_recorder.cpp
src/utility/: CMakeLists.txt  debug_utility.cpp  video_recoder.cpp
stage/: CMakeLists.txt  package.xml
stage/launch/: car_sim.launch
stage/maps/: RMmap-2.yaml
stage/worlds/: RMmap-2.world
