<?xml version="1.0"?>
<package>
  <name>multi-car</name>
  <version>0.0.1</version>
  <description>Broadcasted by UDP between robots, which in the same wlan. </description>

  <maintainer email="lichunpeng2200@outlook.com">skystarry</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
