<?xml version="1.0"?>
<package>
  <name>recoder</name>
  <version>0.0.0</version>
  <description>The recoder package</description>

  <maintainer email="lichunpeng2200@outlook.com">skystarry</maintainer>

  <license>BSD 2-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
