<?xml version="1.0"?>
<package>
  <name>stage</name>
  <version>0.0.0</version>
  <description>The stage package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <run_depend>move_base</run_depend>
  
</package>
